replaced the cat-head image width of 60px to min-width to fix the image distortion for the github and git images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -655,7 +655,7 @@ a.faq {
 }
 
 .cat-head img {
-    width: 60px;
+    min-width: 60px;
     height: 80px;
     margin-bottom: 5px;
 }
